fixed space gap in news-img a @media 768px breakpoint

--- a/style/style.css
+++ b/style/style.css
@@ -904,7 +904,7 @@ footer {
   }
 
   .news-img a {
-    width: 22%;
+    width: 15%;
     margin-right: 10px;
   }
 
